[package]
name = "tweakpoint"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
evdev = { version = "0.13.1", features = ["futures-core", "serde", "tokio"] }
figment = { version = "0.10.19", features = ["toml"] }
futures = "0.3.31"
humantime-serde = "1.1.1"
serde = { version = "1.0.219", features = ["derive"] }
smart-default = "0.7.1"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync", "io-util"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
